2005-07-05  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        * ForwardingHeaders/qwmatrix.h: Added.
        * WebCore.pbproj/project.pbxproj: Added KWQMatrix.*
        * khtml/rendering/render_image.cpp: Now includes qwmatrix.h
        * kwq/KWQPixmap.h: Removed QWMatrix stub.
        * kwq/KWQWMatrix.h: Added.
        (QWMatrix::m11): simple accessors.
        (QWMatrix::m12):
        (QWMatrix::m21):
        (QWMatrix::m22):
        (QWMatrix::dx):
        (QWMatrix::dy):
        * kwq/KWQWMatrix.mm: Added.
        (QWMatrix::QWMatrix): All are standard Qt functions.
        (QWMatrix::setMatrix):
        (QWMatrix::map):
        (QWMatrix::isIdentity):
        (QWMatrix::reset):
        (QWMatrix::scale):
        (QWMatrix::rotate):
        (QWMatrix::translate):
        (QWMatrix::shear):
        (QWMatrix::det):
        (QWMatrix::isInvertible):
        (QWMatrix::invert):
        (QWMatrix::operator CGAffineTransform):
        (QWMatrix::operator== ):
        (QWMatrix::operator*= ):
        Simple white-room QWMatrix implementation entirely 
        based on CGAffineTransform.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=3821

2005-07-05  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        * kwq/KWQPtrList.h: additions necessary for kdom.
        (QPtrList::findRef): added.
        (QPtrList::begin): added.
        (QPtrList::end): added.
        (QPtrListIterator::operator*): added.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=3850

2005-07-04  Maciej Stachowiak  <mjs@apple.com

        Expected results for layout tests from last patch.
	
        * layout-tests/fast/js/eval-var-decl-expected.txt: Added.
        * layout-tests/fast/js/has-own-property-expected.txt: Added.

2005-07-03  Maciej Stachowiak  <mjs@apple.com>

	Original patch from Mark Rowe <opendarwin.org@bdash.net.nz>, reviewed by me.
	Fixes to patch by me, reviewed by John Sullivan.
